fixed gap between board header to grouup lsit

--- a/src/assets/styles/components/BoardHeader.scss
+++ b/src/assets/styles/components/BoardHeader.scss
@@ -3,8 +3,8 @@
     font-size: 14px;
     grid-template-rows: auto auto auto;
     align-items: center;
-    gap: 10px;
-    margin-bottom: 24px;
+    // gap: 5px;
+    // margin-bottom: 24px;
     position: sticky;
     top: 0;
     left: 0;
