--- a/src/assets/styles/components/group/GroupHeader.scss
+++ b/src/assets/styles/components/group/GroupHeader.scss
@@ -1,7 +1,7 @@
 .group-header{
     position: sticky;
     z-index: 10;
-    top: 120px;
+    top: 127px;
     display:grid;
     grid-column: 1/-1;
     grid-template-columns: subgrid;
