--- a/src/assets/styles/components/group/GroupList.scss
+++ b/src/assets/styles/components/group/GroupList.scss
@@ -2,5 +2,6 @@
     display: grid;
     grid-template-columns: min-content min-content minmax(100px, 1fr);
     grid-auto-rows: min-content;
+    background-color: aqua;
     @include fade-in(0.3s, 0s);
 }
